# IoscXAWS-Project

./: .gitignore  README.md  alembic.ini  clean_data.py  create_basic3.py  create_test_student.py  fix_dashboard_photo.py  fix_internship.py  fix_photo_prof.py  fix_script.py  fix_test_student.py  main.py  models.py  photo_fix.py  populate_basic3.py  pyproject.toml  reset_sequence.py  schemas.py  start.sh
alembic/: env.py
alembic/versions/: 3306698d2b76_initial.py  add_otp_rate_limiting.py
app/api/: router.py
app/core/: database.py
app/model/: models.py
app/routes/: academic.py  academic_document.py  account.py  auth.py  classification.py  dashboard.py  documents.py  financial.py  internship.py  noc.py  parent.py  placement.py  register.py  research.py  student.py
app/schema/: schemas.py
app/services/: academic_document_services.py  academic_services.py  authHelper.py  classification_services.py  dashboard_services.py  document_services.py  file_services.py  financial_services.py  internship_services.py  noc_services.py  otp_services.py  parent_services.py  placement_services.py  research_services.py  student_services.py
frontend/: add-student.html  change-password.html  dashboard2.html  index.html  login.html  my-profile.html  profile.html  register.html  students.html
frontend/css/: style.css
frontend/js/: api.js  change-password.js  login.js
frontend/js/pages/: dashboard2.js  my-profile.js  profile.js  students.js
